Fix font contrast error

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -28,6 +28,7 @@ footer {
   background: var(--primary-color);
   padding: 10px;
   margin-top: 40px;
+  font-weight: bold;
 }
 
 header, footer {
@@ -69,7 +70,7 @@ ul {
 #primary-color {
   background: var(--primary-color);
   color: white;
-
+  font-weight: bold;
 }
 
 #secondary-color {
